# idrock-security

./: .env.example  .gitignore  Grupo idRock - Sprint 1 e 2.txt  IDROCK_DEMO_GUIDE.md  PLAN_BEDROCK_IP_REPUTATION_SECURITY_TOOL.md  README.md  STATUS_PROJETO_IDROCK.md  demo-script.py  docker-compose.yml  pyproject.toml  test_auth.py
idrock-security-service/: Dockerfile  alembic.ini  requirements.txt
idrock-security-service/alembic/: env.py
idrock-security-service/alembic/versions/: f1d7b0c4fd7b_add_device_and_deviceaccess_models_with_.py
idrock-security-service/app/: __init__.py  main.py
idrock-security-service/app/core/: auth.py  config.py  database.py
idrock-security-service/app/models/: __init__.py  audit_log.py  device.py  device_access.py  risk_assessment.py
idrock-security-service/app/schemas/: common.py  device.py  health.py  history.py  identity.py
idrock-security-service/app/services/: browser_validation.py  device_access_service.py  device_service.py  hardware_validation.py  history_service.py  proxycheck_client.py  risk_engine.py  travel_detection.py
idrock-security-service/app/tests/: test_device_models.py
nexshop-ecommerce-service/: .env.example  Dockerfile  package.json  server.js
nexshop-ecommerce-service/src/config/: app.js  database.js  idrock.js
nexshop-ecommerce-service/src/middleware/: errorHandler.js  security.js
nexshop-ecommerce-service/src/models/: SecurityLog.js  User.js
nexshop-ecommerce-service/src/routes/: auth.js  orders.js  products.js  security.js
nexshop-ecommerce-service/src/services/: idrockClient.js
(+6 files in other folders)
